fixing player style, still weird on safari

--- a/style.css
+++ b/style.css
@@ -4288,18 +4288,18 @@ mobile only displaying
 
 -------------------------------- */
 #mobile-listen {display: none;}
-#player-desktop {display:inline-block;}
+/*#player-desktop {display:inline-block;}*/
 #tune-in {display: none;}
 #listen-live-li {display: none;}
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1070px) {
     #mobile-listen {display: block;}
-    #player-desktop {display: none;}
+   /* #player-desktop {display: none;}*/
     #tune-in {display: block;}
     #listen-live-li {display: block;}
 }
 
-.player{display:inline-block;padding-top:8px;padding-left:40px}@media screen and (max-width: 992px){.player{display:none}}
+.player{display:inline-block;padding-top:8px;padding-left:40px}@media screen and (max-width: 1070px){.player{display:none}}
 .player i{cursor:crosshair;vertical-align:text-top}
 .player .show-info{display:inline-block;font-size:12px;vertical-align:middle}
 .player .show-info span{display:block;line-height:0.8}.player .show-info a{color:inherit;text-decoration:none}
